force-app/main/default/objects/AAR_Grant__c/AAR_Grant__c.object-meta.xml
<CustomObject>
    <label>AAR Grant</label>
    <nameField>
        <displayFormat>GRT-{0000}</displayFormat>
        <label>Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>