force-app/main/default/objects/AAR_Grant__c/fields/AAR_Submission__c.field-meta.xml
<CustomField>
    <fullName>AAR_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AAR Submission</label>
    <referenceTo>AAR_Submission__c</referenceTo>
    <relationshipLabel>AAR Grants</relationshipLabel>
    <relationshipName>AAR_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>