force-app/main/default/objects/AAR_Grant__c/fields/Amount_Received_Year__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_Year__c</fullName>
    <label>Amount Received This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>