force-app/main/default/objects/AAR_Grant__c/fields/Co_Investigators__c.field-meta.xml
<CustomField>
    <fullName>Co_Investigators__c</fullName>
    <label>Co-Investigators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>