force-app/main/default/objects/AAR_Grant__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>