force-app/main/default/objects/AAR_Grant__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Operating Grant</fullName><default
        >false</default><label>Operating Grant</label></value>
            <value><fullName>Infrastructure Grant</fullName><default
        >false</default><label>Infrastructure Grant</label></value>
            <value><fullName>Salary Award</fullName><default
        >false</default><label>Salary Award</label></value>
            <value><fullName>Contract</fullName><default>false</default><label
        >Contract</label></value>
            <value><fullName>Sponsored Research Agreement</fullName><default
        >false</default><label>Sponsored Research Agreement</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>