force-app/main/default/objects/AAR_Grant__c/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <label>Grant Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Submitted</fullName><default>false</default><label
        >Submitted</label></value>
            <value><fullName>Awarded - Declined</fullName><default
        >false</default><label>Awarded - Declined</label></value>
            <value><fullName>Funded - Not Yet Active</fullName><default
        >false</default><label>Funded - Not Yet Active</label></value>
            <value><fullName>Funded - Active</fullName><default
        >false</default><label>Funded - Active</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>