force-app/main/default/objects/AAR_Grant__c/fields/Grant_Title__c.field-meta.xml
<CustomField>
    <fullName>Grant_Title__c</fullName>
    <label>Grant Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>