force-app/main/default/objects/AAR_Grant__c/fields/Is_Peer_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Is_Peer_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Peer-Reviewed</label>
    <type>Checkbox</type>
</CustomField>