force-app/main/default/objects/AAR_Grant__c/fields/Managed_By_UHN__c.field-meta.xml
<CustomField>
    <fullName>Managed_By_UHN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed by UHN</label>
    <type>Checkbox</type>
</CustomField>