force-app/main/default/objects/AAR_Grant__c/fields/Principal_Investigators__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigators__c</fullName>
    <label>Principal Investigators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>