force-app/main/default/objects/AAR_Grant__c/fields/Scientist_Role__c.field-meta.xml
<CustomField>
    <fullName>Scientist_Role__c</fullName>
    <label>Scientist Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Principal Investigator (PI)</fullName><default
        >false</default><label>Principal Investigator (PI)</label></value>
            <value><fullName>Co-PI</fullName><default>false</default><label
        >Co-PI</label></value>
            <value><fullName>Co-Investigator</fullName><default
        >false</default><label>Co-Investigator</label></value>
            <value><fullName>Collaborator</fullName><default
        >false</default><label>Collaborator</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>